// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/card/addActionCard > Basic Rendering > should render as selected 1`] = `
[
  <div
    id="placeholder-node-Trigger-description"
    style={
      {
        "display": "none",
      }
    }
  >
    Triggers
    : 
    Triggers tell your app when to start running. Each workflow needs at least one trigger.
  </div>,
  <div
    className="ms-TooltipHost root-109"
    onBlurCapture={[Function]}
    onFocusCapture={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="none"
  >
    <div
      style={
        {
          "position": "relative",
        }
      }
    >
      <div
        aria-describedby="placeholder-node-Trigger-description"
        aria-label="Add a trigger"
        className="msla-panel-card-container msla-panel-card-container-selected"
        data-automation-id="card-add_a_trigger"
        data-testid="card-Add a trigger"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        style={
          {
            "borderLeft": "4px solid #484F58",
            "borderRadius": "2px",
          }
        }
        tabIndex={0}
      >
        <div
          className="msla-selection-box selected"
        />
        <div
          className="panel-card-main"
        >
          <div
            className="panel-card-header"
            role="button"
          >
            <div
              className="panel-card-content-container"
            >
              <div
                className="panel-card-content-gripper-section"
              />
              <div
                className="panel-card-content-icon-section"
              >
                <img
                  alt=""
                  className="panel-card-icon"
                  src="/src/lib/card/addActionCard/addNodeIcon.svg"
                  style={
                    {
                      "background": "#484F58",
                      "height": "16px",
                      "padding": "4px",
                      "width": "16px",
                    }
                  }
                />
              </div>
              <div
                className="panel-card-top-content"
              >
                <div
                  className="panel-msla-title"
                >
                  Add a trigger
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      hidden={true}
      id="placeholder-node-Trigger"
      style={
        {
          "border": 0,
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      <div
        style={
          {
            "margin": "-8px 12px 0px",
            "maxWidth": "250px",
          }
        }
      >
        <h2>
          Triggers
        </h2>
        <p>
          Triggers tell your app when to start running. Each workflow needs at least one trigger.
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`lib/card/addActionCard > Basic Rendering > should render with minimal props 1`] = `
[
  <div
    id="placeholder-node-Trigger-description"
    style={
      {
        "display": "none",
      }
    }
  >
    Triggers
    : 
    Triggers tell your app when to start running. Each workflow needs at least one trigger.
  </div>,
  <div
    className="ms-TooltipHost root-109"
    onBlurCapture={[Function]}
    onFocusCapture={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="none"
  >
    <div
      style={
        {
          "position": "relative",
        }
      }
    >
      <div
        aria-describedby="placeholder-node-Trigger-description"
        aria-label="Add a trigger"
        className="msla-panel-card-container"
        data-automation-id="card-add_a_trigger"
        data-testid="card-Add a trigger"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        style={
          {
            "borderLeft": "4px solid #484F58",
            "borderRadius": "2px",
          }
        }
        tabIndex={0}
      >
        <div
          className="msla-selection-box"
        />
        <div
          className="panel-card-main"
        >
          <div
            className="panel-card-header"
            role="button"
          >
            <div
              className="panel-card-content-container"
            >
              <div
                className="panel-card-content-gripper-section"
              />
              <div
                className="panel-card-content-icon-section"
              >
                <img
                  alt=""
                  className="panel-card-icon"
                  src="/src/lib/card/addActionCard/addNodeIcon.svg"
                  style={
                    {
                      "background": "#484F58",
                      "height": "16px",
                      "padding": "4px",
                      "width": "16px",
                    }
                  }
                />
              </div>
              <div
                className="panel-card-top-content"
              >
                <div
                  className="panel-msla-title"
                >
                  Add a trigger
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      hidden={true}
      id="placeholder-node-Trigger"
      style={
        {
          "border": 0,
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      <div
        style={
          {
            "margin": "-8px 12px 0px",
            "maxWidth": "250px",
          }
        }
      >
        <h2>
          Triggers
        </h2>
        <p>
          Triggers tell your app when to start running. Each workflow needs at least one trigger.
        </p>
      </div>
    </div>
  </div>,
]
`;
